--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "pug": "^2.0.3",
     "request": "^2.88.0",
     "signale": "^1.4.0",
+    "v-scroll-lock": "^1.0.1",
     "vue": "^2.6.7",
     "vue-flickity": "^1.1.2",
     "vue-router": "^3.0.2"
