--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "last 2 versions"
   ],
   "dependencies": {
+    "axios": "^0.18.0",
     "font-awesome": "^4.7.0",
     "hamburgers": "^1.1.3",
     "normalize.css": "^8.0.1",
@@ -59,6 +60,7 @@
     "vue": "^2.6.7",
     "vue-flickity": "^1.1.2",
     "vue-parallaxy": "^1.1.1",
-    "vue-router": "^3.0.2"
+    "vue-router": "^3.0.3",
+    "vuex": "^3.1.0"
   }
 }
