--- a/package.json
+++ b/package.json
@@ -48,10 +48,12 @@
     "last 2 versions"
   ],
   "dependencies": {
+    "@babel/polyfill": "^7.4.3",
     "axios": "^0.18.0",
     "font-awesome": "^4.7.0",
     "hamburgers": "^1.1.3",
     "normalize.css": "^8.0.1",
+    "polyfill": "^0.1.0",
     "promptly": "^3.0.3",
     "pug": "^2.0.3",
     "request": "^2.88.0",
