--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "last 2 versions"
   ],
   "dependencies": {
+    "flickity": "^2.2.0",
     "hamburgers": "^1.1.3",
     "normalize.css": "^8.0.1",
     "promptly": "^3.0.3",
