--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "vue-flickity": "^1.1.2",
     "vue-parallaxy": "^1.1.1",
     "vue-router": "^3.0.3",
+    "vue-scrollto": "^2.15.0",
     "vuex": "^3.1.0"
   }
 }
