--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "vue-parallaxy": "^1.1.1",
     "vue-router": "^3.0.3",
     "vue-scrollto": "^2.15.0",
+    "vue-waypoint": "^3.2.2",
     "vuex": "^3.1.0"
   }
 }
