--- a/package.json
+++ b/package.json
@@ -63,11 +63,14 @@
     "v-scroll-lock": "^1.0.1",
     "vue": "^2.6.7",
     "vue-flickity": "^1.1.2",
+    "vue-form": "^4.10.1",
     "vue-loading-overlay": "^3.2.0",
+    "vue-material": "^1.0.0-beta-11",
     "vue-parallaxy": "^1.1.1",
     "vue-router": "^3.0.3",
     "vue-scrollto": "^2.15.0",
     "vue-waypoint": "^3.2.2",
+    "vuelidate": "^0.7.4",
     "vuex": "^3.1.0"
   }
 }
