--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "simple-vue-validator": "^0.16.0",
     "v-scroll-lock": "^1.0.1",
     "vue": "^2.6.7",
+    "vue-axios": "^2.1.4",
     "vue-flickity": "^1.1.2",
     "vue-form": "^4.10.1",
     "vue-loading-overlay": "^3.2.0",
