--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
   ],
   "dependencies": {
     "@babel/polyfill": "^7.4.3",
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
     "epic-spinners": "^1.0.4",
     "font-awesome": "^4.7.0",
     "hamburgers": "^1.1.3",
@@ -63,6 +63,7 @@
     "v-scroll-lock": "^1.0.1",
     "vue": "^2.6.7",
     "vue-axios": "^2.1.4",
+    "vue-dragscroll": "^1.10.2",
     "vue-flickity": "^1.1.2",
     "vue-form": "^4.10.1",
     "vue-loading-overlay": "^3.2.0",
@@ -71,6 +72,7 @@
     "vue-router": "^3.0.3",
     "vue-scrollto": "^2.15.0",
     "vue-waypoint": "^3.2.2",
+    "vue2-touch-events": "^2.0.0",
     "vuelidate": "^0.7.4",
     "vuex": "^3.1.0"
   }
